--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install build twine
 
+      - name: Clean previous build artifacts
+        run: |
+          rm -rf build dist pnpl.egg-info
+
       - name: Build distribution artifacts
         run: |
           python -m build
