--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install build dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install build twine "setuptools<70" wheel
+          pip install build twine wheel
 
       - name: Clean previous build artifacts
         run: |
